--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Welcome to My Porfolio</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
+							<p>Hello, My name is Pich<br />
+							I am a Assistant Lecturer<br />
+							of Department of Electrical and Energy Egnieering <a href="http://html5up.net">HTML5 UP</a>.</p>
 							<ul class="actions special">
 								<li><a href="#" class="button primary">Activate</a></li>
 							</ul>
